--- a/helm/nonnoalex-website/values.yaml
+++ b/helm/nonnoalex-website/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: localhost:5000/nonnoalex-website
+  repository: registry.nonnoalex.dev/nonnoalex/nonnoalex-website
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "1.04"
