--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - 'v*'
-
+  create:
+    tags:
+      - v*
 jobs:
   docker:
     runs-on: ubuntu-latest
