--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           push: true
           tags: |
-            'registry.nonnoalex.dev/nonnoalex/nonnoalex-website:${{env.VERSION_TAG}}'
+            registry.nonnoalex.dev/nonnoalex/nonnoalex-website:${{env.VERSION_TAG}}
           build-args: |
             ${{steps.version_step.outputs.version}}
       #-
