--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: ci
 
 on:
-  create:
-    tags:
-      - v*
+  push:
+    branches:
+      - 'master'
 jobs:
   docker:
     runs-on: ubuntu-latest
