--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'master'
+    tags:
+      — '*'
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -11,17 +13,17 @@ jobs:
       -
         uses: actions/checkout@v2
         name: Set env
-        id: version_step
-        with:
-          run: |
-            echo "##[set-output name=version;]VERSION=${GITHUB_REF#$"refs/tags/v"}"
-            echo "##[set-output name=version_tag;]$GITHUB_REPOSITORY:${GITHUB_REF#$"refs/tags/v"}"
-            echo "##[set-output name=latest_tag;]$GITHUB_REPOSITORY:latest"
       -
-        name: Print Version
-        run: |
-          echo ${{steps.version_step.outputs.version_tag}}
-          echo ${{steps.version_step.outputs.latest_tag}}
+        name: Docker meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: registry.nonnoalex.dev/nonnoalex/nonnoalex-website
+          tags: |
+            type=raw,value=latest,enable=${{ endsWith(GitHub.ref, 'master') }}
+            type=ref,event=tag
+          flavor: |
+            latest=false
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -36,24 +38,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       -
-        name: Prepare Name Image
-        id: read-docker-image-identifiers
-        run: |
-          echo ${{steps.version_step.outputs.version_tag}}
-          echo ${{steps.version_step.outputs.latest_tag}}
-          echo VERSION_TAG=$(echo ${{ steps.version_step.outputs.version_tag }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-          echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag  }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-      -
-      
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: |
-            registry.nonnoalex.dev/nonnoalex/nonnoalex-website:${{env.VERSION_TAG}}
-          build-args: |
-            ${{steps.version_step.outputs.version}}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
