--- a/helm/nonnoalex-website/values.yaml
+++ b/helm/nonnoalex-website/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: registry.nonnoalex.dev/nonnoalex/nonnoalex-website
+  repository: docker.nonnoalex.dev/nonnoalex/nonnoalex-website
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "1.0.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -42,7 +42,7 @@ service:
 
 ingress:
   enabled: true
-  className: ""
+  className: "traefik"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
